--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             let animationFrameId;
 
             const footageConfig = {
-                fastfood: { path: 'footage/fastfood/fastfood ({i}).webp', count: 54 },
+                fastfood: { path: 'footage/fastfood.mp4' },
             };
 
             // Универсальная функция отрисовки кадра
